refactor(app): remove unused components

--- a/ios/react_native_image_avatar_picker/Info.plist
+++ b/ios/react_native_image_avatar_picker/Info.plist
@@ -51,5 +51,13 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Your message to user when the photo library is accessed for the first time</string>
+	<key>NSCameraUsageDescription</key>
+	<string>The camera is accessed for the first time</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>The microphone is accessed for the first time</string>
+
 </dict>
 </plist>
