--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "17.0.2",
     "react-native": "0.65.1",
-    "react-native-image-picker": "^4.0.6"
+    "react-native-image-picker": "^4.0.6",
+    "react-native-modal": "^13.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
